Fixing headers and eyebrow spacing (#4646)

--- a/docs-starlight/src/styles/global.css
+++ b/docs-starlight/src/styles/global.css
@@ -174,6 +174,12 @@ ol li {
     scrollbar-width: none;  /* Firefox */
 }
 
+h1, h2, h3, h4, h5, h6 {
+  color: var(--color-dark-blue-1);
+  font-weight: 400;
+  margin: 0;
+}
+
 header {
   border-bottom: 1px solid var(--sl-color-stroke-dark);
   display: flex;
